<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_score_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.gamescore.GameScoreFragment">

    <TextView
        android:id="@+id/tv_player_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />


    <TextView
        android:id="@+id/tv_player_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />


    <TextView
        android:id="@+id/tv_player_three"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />


    <TextView
        android:id="@+id/tv_player_four"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>